Added current plan functionality

--- a/src/screens/PlanScreen.css
+++ b/src/screens/PlanScreen.css
@@ -22,3 +22,10 @@
     border: none;
     cursor: pointer;
 }
+
+.planScreen__plan--disabled > button {
+    background-color: gray;
+    color: white;
+    cursor: not-allowed;
+    
+}
